--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 bot.name=petStudyScheduleBot
-bot.token=6165061724:AAHYLF4MjN9lPBxzqBgtjqy1URtEssJrTks
+bot.token=
 bot.webhook.url=https://f809-5-18-246-99.eu.ngrok.io/telegram/StudyScheduleBot/
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/StudyScheduleBot
